...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailLocation" />

        <Button
            android:id="@+id/moodCommentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:text="Add Comment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/moodPlayVoiceButton" />

        <Button
            android:id="@+id/moodViewCommentsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="View Comments"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/moodCommentButton"
...
