<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_feed"
        android:title="Feed" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_notifications"
        android:title="Requests" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/nav_moods"
        android:icon="@drawable/ic_mood_history"
        android:title="My Moods" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="You" />
</menu>
