<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp">

    <TextView
        android:id="@+id/requestUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="username"
        android:layout_weight="1"
        android:padding="8dp"/>

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accept"/>

    <Button
        android:id="@+id/rejectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reject"/>

</LinearLayout>
